# semanticscholar-MCP-Server

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
semanticscholar_mcp_server/: __init__.py  __main__.py  diagnose_api.py  models.py  search.py  server.py
tests/: test_semantic_scholar_search.py  test_semantic_scholar_server.py
