[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semanticscholar-mcp-server"
version = "0.1.0"
description = "MCP server for interacting with the Semantic Scholar API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "bs4",
  "mcp",
  "python-dotenv",
  "requests",
  "semanticscholar",
  "tenacity>=9.1.4",
]

[project.scripts]
semanticscholar-mcp-diagnose = "semanticscholar_mcp_server.diagnose_api:main"
semanticscholar-mcp-server = "semanticscholar_mcp_server.server:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
